--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
 - task: ArchiveFiles@2
   displayName: "Archive files"
   inputs:
-    rootFolderOrFile: "$(System.DefaultWorkingDirectory)"
+    rootFolderOrFile: "$(System.DefaultWorkingDirectory)/*.js"
     includeRootFolder: false
     archiveFile: "$(System.DefaultWorkingDirectory)/pipelinetest2.zip"
 - task: PublishBuildArtifacts@1
